[gd_scene load_steps=62 format=3 uid="uid://1c4l1suixtb2"]

[ext_resource type="Script" uid="uid://deift58sa4doh" path="res://Player/Player.gd" id="1_ddoul"]
[ext_resource type="Resource" uid="uid://bimk76ra4fd50" path="res://Dialogue/Feedback.dialogue" id="2_8g4oa"]
[ext_resource type="Texture2D" uid="uid://c8ll63csm0oh" path="res://Assets/Character/Character_walk-Sheet.png" id="2_ddoul"]
[ext_resource type="Script" uid="uid://b5vc2kcyt7tu0" path="res://Player/StateMachine.gd" id="4_8g4oa"]
[ext_resource type="Script" uid="uid://cdq44q7fpdo01" path="res://Player/InteractableDetector.gd" id="5_8g4oa"]
[ext_resource type="FontFile" uid="uid://c6ur18f7svqw1" path="res://Assets/Fonts/Kubasta/Kubasta.ttf" id="6_6ysni"]
[ext_resource type="AudioStream" uid="uid://ciygtkxx14paa" path="res://Assets/Sounds/SFX/CaveFootStep.ogg" id="7_vlldt"]
[ext_resource type="AudioStream" uid="uid://djl6d3y5h63o3" path="res://Assets/Sounds/SFX/ShrinkMagic.ogg" id="8_s1rgi"]
[ext_resource type="AudioStream" uid="uid://xh3f7bbsqct4" path="res://Assets/Sounds/SFX/GrowMagic.ogg" id="9_j23h2"]
[ext_resource type="Texture2D" uid="uid://ckckw2wam8w0y" path="res://Assets/Particles/ParticleTextures/magic_pixel.png" id="10_0j2ni"]

[sub_resource type="Shader" id="Shader_j23h2"]
code = "shader_type canvas_item;

uniform sampler2D noise_tex1:repeat_enable;
uniform sampler2D noise_tex2:repeat_enable;

uniform vec2 offset1 = vec2(0.1);
uniform vec2 offset2 = vec2(0.2);

uniform float distortion_strength: hint_range(-1.0, 1.0) = 0.1;

uniform vec4 color: source_color = vec4(1,1,1,1);

void fragment()
{
	vec4 noise_color1 = texture(noise_tex1, UV + offset1 * TIME);
	vec4 noise_color2 = texture(noise_tex2, UV + offset2 * TIME);

	float final_noise = noise_color1.r * noise_color2.r;

	vec4 final_color = texture(TEXTURE, UV + final_noise*distortion_strength);

	COLOR = final_color * color;
}"

[sub_resource type="FastNoiseLite" id="FastNoiseLite_0j2ni"]

[sub_resource type="NoiseTexture2D" id="NoiseTexture2D_0j2ni"]
noise = SubResource("FastNoiseLite_0j2ni")

[sub_resource type="FastNoiseLite" id="FastNoiseLite_v0k0e"]

[sub_resource type="NoiseTexture2D" id="NoiseTexture2D_v0k0e"]
noise = SubResource("FastNoiseLite_v0k0e")

[sub_resource type="ShaderMaterial" id="ShaderMaterial_0j2ni"]
shader = SubResource("Shader_j23h2")
shader_parameter/noise_tex1 = SubResource("NoiseTexture2D_0j2ni")
shader_parameter/noise_tex2 = SubResource("NoiseTexture2D_v0k0e")
shader_parameter/offset1 = Vector2(0.1, 0.1)
shader_parameter/offset2 = Vector2(0.2, 0.2)
shader_parameter/distortion_strength = 4.75e-08
shader_parameter/color = Color(1, 1, 1, 1)

[sub_resource type="AtlasTexture" id="AtlasTexture_8g4oa"]
atlas = ExtResource("2_ddoul")
region = Rect2(0, 192, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_6ysni"]
atlas = ExtResource("2_ddoul")
region = Rect2(0, 64, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_vlldt"]
atlas = ExtResource("2_ddoul")
region = Rect2(0, 128, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_s1rgi"]
atlas = ExtResource("2_ddoul")
region = Rect2(0, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_j23h2"]
atlas = ExtResource("2_ddoul")
region = Rect2(0, 192, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_0j2ni"]
atlas = ExtResource("2_ddoul")
region = Rect2(64, 192, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_v0k0e"]
atlas = ExtResource("2_ddoul")
region = Rect2(128, 192, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_5wa8t"]
atlas = ExtResource("2_ddoul")
region = Rect2(192, 192, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_p7tob"]
atlas = ExtResource("2_ddoul")
region = Rect2(256, 192, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_dm7nj"]
atlas = ExtResource("2_ddoul")
region = Rect2(320, 192, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_3mea3"]
atlas = ExtResource("2_ddoul")
region = Rect2(384, 192, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_7v5gs"]
atlas = ExtResource("2_ddoul")
region = Rect2(448, 192, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_8sa4y"]
atlas = ExtResource("2_ddoul")
region = Rect2(0, 64, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_3nb2p"]
atlas = ExtResource("2_ddoul")
region = Rect2(64, 64, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_d7xyo"]
atlas = ExtResource("2_ddoul")
region = Rect2(128, 64, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_evw08"]
atlas = ExtResource("2_ddoul")
region = Rect2(192, 64, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_roy6y"]
atlas = ExtResource("2_ddoul")
region = Rect2(256, 64, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_u5tep"]
atlas = ExtResource("2_ddoul")
region = Rect2(320, 64, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_ps8ct"]
atlas = ExtResource("2_ddoul")
region = Rect2(384, 64, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_7uipr"]
atlas = ExtResource("2_ddoul")
region = Rect2(448, 64, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_yifbt"]
atlas = ExtResource("2_ddoul")
region = Rect2(0, 128, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_s0mko"]
atlas = ExtResource("2_ddoul")
region = Rect2(64, 128, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_hqjia"]
atlas = ExtResource("2_ddoul")
region = Rect2(128, 128, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_x70vp"]
atlas = ExtResource("2_ddoul")
region = Rect2(192, 128, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_wo5nf"]
atlas = ExtResource("2_ddoul")
region = Rect2(256, 128, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_croik"]
atlas = ExtResource("2_ddoul")
region = Rect2(320, 128, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_bgaaw"]
atlas = ExtResource("2_ddoul")
region = Rect2(384, 128, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_gv3fu"]
atlas = ExtResource("2_ddoul")
region = Rect2(448, 128, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_xu7fl"]
atlas = ExtResource("2_ddoul")
region = Rect2(0, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_78fhc"]
atlas = ExtResource("2_ddoul")
region = Rect2(64, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_4n5ed"]
atlas = ExtResource("2_ddoul")
region = Rect2(128, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_yf47d"]
atlas = ExtResource("2_ddoul")
region = Rect2(192, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_jvfa1"]
atlas = ExtResource("2_ddoul")
region = Rect2(256, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_ib3vm"]
atlas = ExtResource("2_ddoul")
region = Rect2(320, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_vtj8b"]
atlas = ExtResource("2_ddoul")
region = Rect2(384, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_rqaa0"]
atlas = ExtResource("2_ddoul")
region = Rect2(448, 0, 64, 64)

[sub_resource type="SpriteFrames" id="SpriteFrames_qrhfk"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_8g4oa")
}],
"loop": true,
"name": &"idle_down",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_6ysni")
}],
"loop": true,
"name": &"idle_left",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_vlldt")
}],
"loop": true,
"name": &"idle_right",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_s1rgi")
}],
"loop": true,
"name": &"idle_up",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_j23h2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0j2ni")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_v0k0e")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5wa8t")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_p7tob")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_dm7nj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3mea3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7v5gs")
}],
"loop": true,
"name": &"walk_down",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_8sa4y")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3nb2p")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_d7xyo")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_evw08")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_roy6y")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_u5tep")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ps8ct")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7uipr")
}],
"loop": true,
"name": &"walk_left",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_yifbt")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_s0mko")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hqjia")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_x70vp")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wo5nf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_croik")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bgaaw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gv3fu")
}],
"loop": true,
"name": &"walk_right",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_xu7fl")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_78fhc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4n5ed")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_yf47d")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jvfa1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ib3vm")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vtj8b")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rqaa0")
}],
"loop": true,
"name": &"walk_up",
"speed": 5.0
}]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_ddoul"]
radius = 22.0
height = 64.0

[sub_resource type="RectangleShape2D" id="RectangleShape2D_6ysni"]
size = Vector2(64, 65)

[sub_resource type="LabelSettings" id="LabelSettings_vlldt"]
font = ExtResource("6_6ysni")

[sub_resource type="GDScript" id="GDScript_ddoul"]

[sub_resource type="Animation" id="Animation_8g4oa"]
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Camera:zoom")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1, 1)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath(".:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Sprite:material:shader_parameter/distortion_strength")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [4.75e-08]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("Sprite:material:shader_parameter/color")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_6ysni"]
resource_name = "grow_animation"
length = 1.1
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(0.1, 0.1), Vector2(1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Camera:zoom")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(6, 6), Vector2(1, 1)]
}
tracks/2/type = "method"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath(".")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 1.1),
"transitions": PackedFloat32Array(1, 1),
"values": [{
"args": [],
"method": &"cant_move"
}, {
"args": [],
"method": &"can_move"
}]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath(".:modulate")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.5, 1.1),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(0.509804, 0.32549, 0.215686, 1), Color(1, 1, 1, 1)]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("Sprite:material:shader_parameter/distortion_strength")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0, 1.1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [0.018, 4.75e-08]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("Sprite:material:shader_parameter/color")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0, 0.5, 1.1),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(0.509804, 0.32549, 0.215686, 1), Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_ddoul"]
resource_name = "shrink_animation"
length = 1.1
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(1, 1), Vector2(0.1, 0.1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Camera:zoom")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(1, 1), Vector2(6, 6)]
}
tracks/2/type = "method"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath(".")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 1.1),
"transitions": PackedFloat32Array(1, 1),
"values": [{
"args": [],
"method": &"cant_move"
}, {
"args": [],
"method": &"can_move"
}]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath(".:modulate")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.5, 1.1),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(0.141176, 0.321569, 0.45098, 1), Color(1, 1, 1, 1)]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("Sprite:material:shader_parameter/distortion_strength")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0, 1.1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [0.025, 4.75e-08]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("Sprite:material:shader_parameter/color")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0, 0.5, 1.1),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(0.141176, 0.321569, 0.45098, 1), Color(1, 1, 1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_6ysni"]
_data = {
&"RESET": SubResource("Animation_8g4oa"),
&"grow_animation": SubResource("Animation_6ysni"),
&"shrink_animation": SubResource("Animation_ddoul")
}

[node name="Player" type="CharacterBody2D" node_paths=PackedStringArray("animation_player") groups=["player"]]
collision_layer = 2
collision_mask = 39
motion_mode = 1
script = ExtResource("1_ddoul")
feedback_dialogue = ExtResource("2_8g4oa")
animation_player = NodePath("AnimationPlayer")

[node name="Sprite" type="AnimatedSprite2D" parent="."]
unique_name_in_owner = true
material = SubResource("ShaderMaterial_0j2ni")
sprite_frames = SubResource("SpriteFrames_qrhfk")
animation = &"idle_down"
autoplay = "idle_down"
frame_progress = 0.87224

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
shape = SubResource("CapsuleShape2D_ddoul")

[node name="StateMachine" type="Node" parent="." node_paths=PackedStringArray("current_player")]
script = ExtResource("4_8g4oa")
current_player = NodePath("..")

[node name="Camera" type="Camera2D" parent="." groups=["player"]]
unique_name_in_owner = true

[node name="InteractableDetector" type="Area2D" parent="."]
visible = false
collision_layer = 0
collision_mask = 4
script = ExtResource("5_8g4oa")

[node name="CollisionShape2D" type="CollisionShape2D" parent="InteractableDetector"]
position = Vector2(0, 0.5)
shape = SubResource("RectangleShape2D_6ysni")
debug_color = Color(0.8699, 0.276416, 0.555506, 0.42)

[node name="InteractLabel" type="Label" parent="."]
unique_name_in_owner = true
offset_left = -21.0
offset_top = -52.0
offset_right = 19.0
offset_bottom = -23.0
label_settings = SubResource("LabelSettings_vlldt")
horizontal_alignment = 1
vertical_alignment = 1

[node name="TileMapChecker" type="Node2D" parent="."]
script = SubResource("GDScript_ddoul")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_6ysni")
}

[node name="AudioListener2D" type="AudioListener2D" parent="."]
current = true

[node name="FootstepCave" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("7_vlldt")
volume_db = -10.0
pitch_scale = 7.0
max_polyphony = 4

[node name="FootstepDealyTimer" type="Timer" parent="."]
wait_time = 0.45
one_shot = true

[node name="ShrinkSFX" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("8_s1rgi")
volume_db = -10.0

[node name="GrowSFX" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("9_j23h2")
volume_db = -10.0

[node name="PointLight2D" type="PointLight2D" parent="."]
scale = Vector2(15, 15)
color = Color(0.368627, 0.494118, 0.545098, 1)
shadow_enabled = true
texture = ExtResource("10_0j2ni")

[connection signal="area_entered" from="InteractableDetector" to="InteractableDetector" method="_on_area_entered"]
[connection signal="body_exited" from="InteractableDetector" to="InteractableDetector" method="_on_body_exited"]
